# doc_hunter

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
common/utils/: cache.py
doc_hunter_service/: Dockerfile  doc_hunter_service.py  requirements.txt
doc_hunter_service/common/endpoits/: depends.py
doc_hunter_service/common/utils/: cache.py  speed_test.py
doc_hunter_service/core/: config.py
doc_hunter_service/departments/: endpoints.py  repositories.py
doc_hunter_service/doctors/: endpoints.py  repositories.py
doc_hunter_service/endpoits/: free_times.py
doc_hunter_service/filials/: endpoints.py  models.py  repositories.py
doc_hunter_service/repositories/: departments.py  doctors.py  filials.py  free_times.py
doc_hunter_service/schedules/: endpoints.py  models.py  repositories.py
endpoits/: departments.py  depends.py  doctors.py  filials.py  free_times.py
microservice/: Dockerfile
microservice/endpoits/: depends.py
microservice/models/: filials.py  free_times.py
microservice/repositories/: filials.py
models/: departments.py  doctors.py
redis/: redis.conf
repositories/: departments.py  doctors.py  filials.py  free_times.py
