[tool.poetry]
name = "doc_hunter"
version = "0.1.0"
description = ""
authors = ["levmorgot <levmorgot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.1"
httpx = "^0.21.1"
Scrapy = "^2.5.1"
uvicorn = "^0.16.0"
aioredis = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
